# modern-rendering-technology

./: .gitignore  CMakeLists.txt  README.md  build.bat
API/: CMakeLists.txt
API/GLAD/: glad.c  glad.h
API/GLAD/src/: glad.c
API/GLFW/src/: mappings.h
API/TOOL/inc/: Camera.h  ShaderProgram.h  Tool.h
API/TOOL/src/: Camera.cpp  ShaderProgram.cpp
DeferredRendering/: CMakeLists.txt  main.cpp
GridSimplification/: CMakeLists.txt  main.cpp
GridSubdivision/: CMakeLists.txt  main.cpp
HelloTriangle/: CMakeLists.txt  main.cpp
HelloWindow/: CMakeLists.txt  main.cpp
Lighting/: CMakeLists.txt  main.cpp
LightingSource/: CMakeLists.txt  main.cpp
OIT/: CMakeLists.txt  main.cpp
Shadow/: CMakeLists.txt  main.cpp
